RESOLVED FIXED203597
Fix color component rounding to match the CSS Color spec
https://bugs.webkit.org/show_bug.cgi?id=203597
Summary Fix color component rounding to match the CSS Color spec
Simon Fraser (smfr)
Reported 2019-10-29 17:24:53 PDT
Fix alpha value rounding to match the CSS Color spec
Attachments
Patch (60.49 KB, patch)
2019-10-29 17:33 PDT, Simon Fraser (smfr)
no flags
Patch (66.13 KB, patch)
2019-10-29 18:19 PDT, Simon Fraser (smfr)
thorton: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews210 for win-future (13.92 MB, application/zip)
2019-10-29 19:39 PDT, EWS Watchlist
no flags
Patch (287.25 KB, patch)
2019-10-29 20:21 PDT, Simon Fraser (smfr)
no flags
Patch (316.85 KB, patch)
2019-10-29 22:10 PDT, Simon Fraser (smfr)
no flags
Patch (655.42 KB, patch)
2019-10-30 21:08 PDT, Simon Fraser (smfr)
ews-watchlist: commit-queue-
Archive of layout-test-results from ews210 for win-future (14.77 MB, application/zip)
2019-10-31 08:27 PDT, EWS Watchlist
no flags
Patch (661.89 KB, patch)
2019-11-08 09:54 PST, Simon Fraser (smfr)
ews-watchlist: commit-queue-
Archive of layout-test-results from ews212 for win-future (14.92 MB, application/zip)
2019-11-11 22:35 PST, EWS Watchlist
no flags
Patch (724.55 KB, patch)
2019-11-18 11:46 PST, Simon Fraser (smfr)
no flags
Patch (746.10 KB, patch)
2019-11-18 12:53 PST, Simon Fraser (smfr)
ews-watchlist: commit-queue-
Archive of layout-test-results from ews213 for win-future (14.72 MB, application/zip)
2019-11-18 14:42 PST, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2019-10-29 17:33:52 PDT
Radar WebKit Bug Importer
Comment 2 2019-10-29 17:34:16 PDT
Simon Fraser (smfr)
Comment 3 2019-10-29 18:19:40 PDT
Tim Horton
Comment 4 2019-10-29 19:01:49 PDT
Comment on attachment 382259 [details] Patch Please fix the tests
EWS Watchlist
Comment 5 2019-10-29 19:39:25 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 6 2019-10-29 19:39:27 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 7 2019-10-29 20:21:53 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 8 2019-10-29 22:10:01 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 9 2019-10-30 21:08:20 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 10 2019-10-31 08:27:36 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 11 2019-10-31 08:27:39 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 12 2019-11-08 09:54:29 PST
EWS Watchlist
Comment 13 2019-11-11 22:35:43 PST
Comment on attachment 383136 [details] Patch Attachment 383136 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/13241677 New failing tests: fast/shapes/shape-outside-floats/shape-outside-dynamic-shape-image-threshold.html http/tests/navigation/page-cache-mediastream.html fast/css/percentage-non-integer.html fast/overflow/float-in-relpositioned.html fast/canvas/canvas-fillPath-shadow.html fast/table/border-collapsing/collapsed-borders-adjoining-sections-vertical-rl.html http/tests/navigation/page-cache-mediakeysession.html svg/W3C-SVG-1.1/color-prop-02-f.svg fast/table/border-collapsing/collapsed-borders-painted-once-on-inner-cells.html fast/table/border-collapsing/equal-precedence-resolution-vertical.html fast/table/border-collapsing/equal-precedence-resolution.html fast/block/basic/fieldset-stretch-to-legend.html fast/text/shadow-translucent-fill.html svg/W3C-SVG-1.1/color-prop-03-t.svg http/tests/xmlhttprequest/access-control-and-redirects-async.html fast/css/viewport-units-dynamic.html fast/block/float/intruding-painted-twice.html
EWS Watchlist
Comment 14 2019-11-11 22:35:46 PST
Created attachment 383337 [details] Archive of layout-test-results from ews212 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews212 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Simon Fraser (smfr)
Comment 15 2019-11-18 11:46:07 PST
Simon Fraser (smfr)
Comment 16 2019-11-18 12:53:06 PST
EWS Watchlist
Comment 17 2019-11-18 14:42:06 PST
Comment on attachment 383777 [details] Patch Attachment 383777 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/13264994 New failing tests: fast/css/percentage-non-integer.html fast/overflow/float-in-relpositioned.html fast/canvas/canvas-fillPath-shadow.html svg/W3C-SVG-1.1/color-prop-02-f.svg fast/table/border-collapsing/collapsed-borders-adjoining-sections-vertical-rl.html fast/table/border-collapsing/collapsed-borders-painted-once-on-inner-cells.html fast/css/viewport-units-dynamic.html fast/table/border-collapsing/equal-precedence-resolution.html fast/block/basic/fieldset-stretch-to-legend.html fast/text/shadow-translucent-fill.html svg/W3C-SVG-1.1/color-prop-03-t.svg fast/table/border-collapsing/equal-precedence-resolution-vertical.html fast/block/float/intruding-painted-twice.html
EWS Watchlist
Comment 18 2019-11-18 14:42:08 PST
Created attachment 383792 [details] Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Simon Fraser (smfr)
Comment 19 2019-11-18 15:15:05 PST
Note You need to log in before you can comment on or make changes to this bug.