LayoutTests/imported/w3c: Fix alpha value rounding to match the CSS Color spec https://bugs.webkit.org/show_bug.cgi?id=203597 <rdar://problem/56728546>

Reviewed by Tim Horton.

More passing results.

* web-platform-tests/css/css-color/color-resolving-expected.txt:
* web-platform-tests/css/css-color/parsing/color-computed-expected.txt:
* web-platform-tests/css/css-color/parsing/color-valid-expected.txt:
* web-platform-tests/css/css-multicol/inheritance-expected.txt:
* web-platform-tests/css/css-text-decor/inheritance-expected.txt:
* web-platform-tests/css/css-ui/caret-color-021-expected.txt:
* web-platform-tests/css/css-ui/outline-017-expected.txt:
* web-platform-tests/css/cssom/serialize-values-expected.txt:
* web-platform-tests/imagebitmap-renderingcontext/context-creation-with-alpha-expected.txt: failure mode now matches Firefox and Chrome (webkit.org/b/204311)
* web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-expected.txt:

Source/WebCore:
Fix alpha value rounding to match the CSS Color spec
https://bugs.webkit.org/show_bug.cgi?id=203597
<rdar://problem/56728546>

Reviewed by Tim Horton.

The serialization of CSS color alpha values is described at https://drafts.csswg.org/cssom/#serializing-css-values,
so implement that. Use 255 as the multiplication factor for float alpha values in the fast and slow
parser code paths.

Based on Chromium commit 13a86c2faeebcbc12dd4a7e8dea54318da635c19.

Tested by WPT and fast/css tests.

* css/parser/CSSParserFastPaths.cpp:
(WebCore::parseColorIntOrPercentage):
(WebCore::parseAlphaValue):
* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::parseRGBParameters):
* platform/graphics/Color.cpp:
(WebCore::Color::cssText const):
* rendering/shapes/Shape.cpp:
(WebCore::Shape::createRasterShape): Alpha rounding for shapes has to match alpha rounding for colors.

Tools:
Fix alpha value rounding to match the CSS Color spec
https://bugs.webkit.org/show_bug.cgi?id=203597
<rdar://problem/56728546>

Reviewed by Tim Horton.

Fix the test for rounding.

* TestWebKitAPI/Tests/mac/FontManagerTests.mm:
(TestWebKitAPI::TEST):

LayoutTests:
Fix color component rounding to match the CSS Color spec
https://bugs.webkit.org/show_bug.cgi?id=203597
<rdar://problem/56728546>

Reviewed by Tim Horton.

New results.

* TestExpectations:
* css3/calc/color-hsl-expected.txt:
* css3/calc/color-rgb-expected.txt:
* css3/filters/backdrop/backdrop-filter-with-clip-path-expected.txt:
* displaylists/canvas-display-list-expected.txt:
* editing/execCommand/query-command-value-background-color-expected.txt:
* editing/execCommand/query-command-value-background-color.html:
* fast/block/basic/fieldset-stretch-to-legend-expected.txt:
* fast/block/float/relative-painted-twice-expected.txt:
* fast/borders/border-image-trumps-radius-expected.txt:
* fast/borders/border-left-right-same-bottom-different-color-expected.txt:
* fast/borders/border-radius-groove-03-expected.txt:
* fast/borders/border-radius-wide-border-03-expected.txt:
* fast/borders/border-radius-wide-border-04-expected.txt:
* fast/borders/borderRadiusDashed05-expected.txt:
* fast/borders/borderRadiusDotted05-expected.txt:
* fast/borders/borderRadiusDotted06-expected.txt:
* fast/borders/borderRadiusDouble05-expected.txt:
* fast/borders/borderRadiusDouble09-expected.txt:
* fast/borders/fieldsetBorderRadius-expected.txt:
* fast/canvas/rgba-parsing-expected.txt:
* fast/canvas/rgba-parsing.html:
* fast/css/apple-system-control-colors-expected.txt:
* fast/css/paint-order-shadow-expected.html:
* fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-color-expected.txt:
* fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-color.html:
* fast/frames/content-opacity-1-expected.txt:
* fast/table/border-collapsing/collapsed-borders-adjoining-sections-vertical-rl-expected.txt:
* fast/table/border-collapsing/collapsed-borders-painted-once-on-inner-cells-expected.txt:
* media/modern-media-controls/background-tint/background-tint-expected.txt:
* media/modern-media-controls/background-tint/background-tint.html:
* media/modern-media-controls/button/button-focus-state-expected.txt:
* media/modern-media-controls/button/button-focus-state.html:
* platform/ios-simulator/imported/w3c/web-platform-tests/svg/import/color-prop-02-f-manual-expected.txt:
* platform/ios-simulator/imported/w3c/web-platform-tests/svg/import/color-prop-03-t-manual-expected.txt:
* platform/ios-wk2/editing/pasteboard/4641033-expected.txt:
* platform/ios-wk2/editing/pasteboard/4944770-1-expected.txt:
* platform/ios-wk2/editing/selection/caret-before-select-expected.txt:
* platform/ios-wk2/fast/block/basic/011-expected.txt:
* platform/ios-wk2/fast/block/margin-collapse/103-expected.txt:
* platform/ios-wk2/fast/dom/HTMLTextAreaElement/reset-textarea-expected.txt:
* platform/ios-wk2/fast/overflow/float-in-relpositioned-expected.txt:
* platform/ios-wk2/fast/overflow/scroll-nested-positioned-layer-in-overflow-expected.txt:
* platform/ios-wk2/fast/overflow/scrollRevealButton-expected.txt:
* platform/ios-wk2/fast/spatial-navigation/snav-multiple-select-focusring-expected.txt:
* platform/ios-wk2/fast/text/shadow-no-blur-expected.txt:
* platform/ios-wk2/fast/text/shadow-translucent-fill-expected.txt:
* platform/ios/TestExpectations:
* platform/ios/compositing/images/direct-image-background-color-expected.txt:
* platform/ios/compositing/overflow/theme-affects-visual-overflow-expected.txt:
* platform/ios/compositing/webgl/webgl-background-color-expected.txt:
* platform/ios/css1/box_properties/acid_test-expected.txt:
* platform/ios/css2.1/t09-c5526c-display-00-e-expected.txt:
* platform/ios/css3/flexbox/button-expected.txt:
* platform/ios/css3/selectors3/html/css3-modsel-19b-expected.txt:
* platform/ios/css3/selectors3/html/css3-modsel-64-expected.txt:
* platform/ios/css3/selectors3/xhtml/css3-modsel-19b-expected.txt:
* platform/ios/css3/selectors3/xhtml/css3-modsel-64-expected.txt:
* platform/ios/css3/selectors3/xml/css3-modsel-19b-expected.txt:
* platform/ios/css3/selectors3/xml/css3-modsel-64-expected.txt:
* platform/ios/editing/selection/3690703-2-expected.txt:
* platform/ios/editing/selection/3690703-expected.txt:
* platform/ios/editing/selection/3690719-expected.txt:
* platform/ios/editing/selection/4397952-expected.txt:
* platform/ios/editing/selection/5240265-expected.txt:
* platform/ios/editing/selection/replaced-boundaries-3-expected.txt:
* platform/ios/editing/selection/select-box-expected.txt:
* platform/ios/editing/selection/select-element-paragraph-boundary-expected.txt:
* platform/ios/editing/selection/selection-button-text-expected.txt:
* platform/ios/fast/backgrounds/background-leakage-expected.txt:
* platform/ios/fast/backgrounds/background-leakage-transforms-expected.txt:
* platform/ios/fast/block/float/float-avoidance-expected.txt:
* platform/ios/fast/block/float/intruding-painted-twice-expected.txt:
* platform/ios/fast/block/positioning/inline-block-relposition-expected.txt:
* platform/ios/fast/borders/mixed-border-styles-expected.txt:
* platform/ios/fast/borders/mixed-border-styles-radius-expected.txt:
* platform/ios/fast/borders/mixed-border-styles-radius2-expected.txt:
* platform/ios/fast/box-shadow/inset-box-shadow-radius-expected.txt:
* platform/ios/fast/css/continuationCrash-expected.txt:
* platform/ios/fast/css/margin-top-bottom-dynamic-expected.txt:
* platform/ios/fast/css/non-standard-checkbox-size-expected.txt:
* platform/ios/fast/css/percentage-non-integer-expected.txt:
* platform/ios/fast/css/rtl-ordering-expected.txt:
* platform/ios/fast/css/shadow-multiple-expected.txt:
* platform/ios/fast/css/text-transform-select-expected.txt:
* platform/ios/fast/css/viewport-units-dynamic-expected.txt:
* platform/ios/fast/dom/HTMLTableColElement/resize-table-using-col-width-expected.txt:
* platform/ios/fast/dynamic/positioned-movement-with-positioned-children-expected.txt:
* platform/ios/fast/forms/001-expected.txt:
* platform/ios/fast/forms/003-expected.txt:
* platform/ios/fast/forms/004-expected.txt:
* platform/ios/fast/forms/basic-inputs-expected.txt:
* platform/ios/fast/forms/basic-selects-expected.txt:
* platform/ios/fast/forms/blankbuttons-expected.txt:
* platform/ios/fast/forms/box-shadow-override-expected.txt:
* platform/ios/fast/forms/button-align-expected.txt:
* platform/ios/fast/forms/button-cannot-be-nested-expected.txt:
* platform/ios/fast/forms/button-generated-content-expected.txt:
* platform/ios/fast/forms/button-positioned-expected.txt:
* platform/ios/fast/forms/button-sizes-expected.txt:
* platform/ios/fast/forms/button-style-color-expected.txt:
* platform/ios/fast/forms/button-table-styles-expected.txt:
* platform/ios/fast/forms/button-text-transform-expected.txt:
* platform/ios/fast/forms/button-white-space-expected.txt:
* platform/ios/fast/forms/control-clip-expected.txt:
* platform/ios/fast/forms/control-clip-overflow-expected.txt:
* platform/ios/fast/forms/control-restrict-line-height-expected.txt:
* platform/ios/fast/forms/disabled-select-change-index-expected.txt:
* platform/ios/fast/forms/file/file-input-direction-expected.txt:
* platform/ios/fast/forms/file/file-input-disabled-expected.txt:
* platform/ios/fast/forms/form-element-geometry-expected.txt:
* platform/ios/fast/forms/formmove-expected.txt:
* platform/ios/fast/forms/formmove2-expected.txt:
* platform/ios/fast/forms/formmove3-expected.txt:
* platform/ios/fast/forms/hidden-listbox-expected.txt:
* platform/ios/fast/forms/input-appearance-height-expected.txt:
* platform/ios/fast/forms/input-button-sizes-expected.txt:
* platform/ios/fast/forms/input-value-expected.txt:
* platform/ios/fast/forms/listbox-bidi-align-expected.txt:
* platform/ios/fast/forms/listbox-hit-test-zoomed-expected.txt:
* platform/ios/fast/forms/listbox-scrollbar-incremental-load-expected.txt:
* platform/ios/fast/forms/listbox-width-change-expected.txt:
* platform/ios/fast/forms/menulist-clip-expected.txt:
* platform/ios/fast/forms/menulist-deselect-update-expected.txt:
* platform/ios/fast/forms/menulist-narrow-width-expected.txt:
* platform/ios/fast/forms/menulist-no-overflow-expected.txt:
* platform/ios/fast/forms/menulist-option-wrap-expected.txt:
* platform/ios/fast/forms/menulist-separator-painting-expected.txt:
* platform/ios/fast/forms/menulist-style-color-expected.txt:
* platform/ios/fast/forms/menulist-width-change-expected.txt:
* platform/ios/fast/forms/option-script-expected.txt:
* platform/ios/fast/forms/option-strip-whitespace-expected.txt:
* platform/ios/fast/forms/option-text-clip-expected.txt:
* platform/ios/fast/forms/select-align-expected.txt:
* platform/ios/fast/forms/select-baseline-expected.txt:
* platform/ios/fast/forms/select-block-background-expected.txt:
* platform/ios/fast/forms/select-change-listbox-size-expected.txt:
* platform/ios/fast/forms/select-change-listbox-to-popup-expected.txt:
* platform/ios/fast/forms/select-change-popup-to-listbox-expected.txt:
* platform/ios/fast/forms/select-dirty-parent-pref-widths-expected.txt:
* platform/ios/fast/forms/select-disabled-appearance-expected.txt:
* platform/ios/fast/forms/select-empty-option-height-expected.txt:
* platform/ios/fast/forms/select-initial-position-expected.txt:
* platform/ios/fast/forms/select-item-background-clip-expected.txt:
* platform/ios/fast/forms/select-list-box-with-height-expected.txt:
* platform/ios/fast/forms/select-non-native-rendering-direction-expected.txt:
* platform/ios/fast/forms/select-selected-expected.txt:
* platform/ios/fast/forms/select-style-expected.txt:
* platform/ios/fast/forms/select-visual-hebrew-expected.txt:
* platform/ios/fast/forms/select-writing-direction-natural-expected.txt:
* platform/ios/fast/forms/select/optgroup-rendering-expected.txt:
* platform/ios/fast/forms/selectlist-minsize-expected.txt:
* platform/ios/fast/forms/stuff-on-my-optgroup-expected.txt:
* platform/ios/fast/html/details-replace-summary-child-expected.txt:
* platform/ios/fast/html/details-replace-text-expected.txt:
* platform/ios/fast/html/keygen-expected.txt:
* platform/ios/fast/inline/positionedLifetime-expected.txt:
* platform/ios/fast/invalid/014-expected.txt:
* platform/ios/fast/multicol/client-rects-expected.txt:
* platform/ios/fast/multicol/client-rects-spanners-complex-expected.txt:
* platform/ios/fast/multicol/client-rects-spanners-expected.txt:
* platform/ios/fast/multicol/newmulticol/client-rects-expected.txt:
* platform/ios/fast/parser/bad-xml-slash-expected.txt:
* platform/ios/fast/replaced/replaced-breaking-expected.txt:
* platform/ios/fast/replaced/replaced-breaking-mixture-expected.txt:
* platform/ios/fast/replaced/three-selects-break-expected.txt:
* platform/ios/fast/replaced/width100percent-button-expected.txt:
* platform/ios/fast/replaced/width100percent-checkbox-expected.txt:
* platform/ios/fast/replaced/width100percent-menulist-expected.txt:
* platform/ios/fast/replaced/width100percent-radio-expected.txt:
* platform/ios/fast/ruby/select-ruby-expected.txt:
* platform/ios/fast/selectors/064-expected.txt:
* platform/ios/fast/table/append-cells2-expected.txt:
* platform/ios/fast/table/border-collapsing/equal-precedence-resolution-expected.txt:
* platform/ios/fast/table/border-collapsing/equal-precedence-resolution-vertical-expected.txt:
* platform/ios/fast/table/remove-td-display-none-expected.txt:
* platform/ios/fast/text/international/bidi-listbox-atsui-expected.txt:
* platform/ios/fast/text/international/bidi-listbox-expected.txt:
* platform/ios/fast/text/international/bidi-menulist-expected.txt:
* platform/ios/fast/text/international/hindi-spacing-expected.txt:
* platform/ios/fast/text/international/pop-up-button-text-alignment-and-direction-expected.txt:
* platform/ios/fast/text/whitespace/normal-after-nowrap-breaking-expected.txt:
* platform/ios/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-expected.txt:
* platform/ios/ios/fast/borders/thin-lozenge-expected.txt:
* platform/ios/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt:
* platform/ios/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt:
* platform/ios/svg/custom/foreign-object-skew-expected.txt:
* platform/ios/svg/custom/inline-svg-in-xhtml-expected.txt:
* platform/ios/tables/mozilla/bugs/bug1188-expected.txt:
* platform/ios/tables/mozilla/bugs/bug1318-expected.txt:
* platform/ios/tables/mozilla/bugs/bug138725-expected.txt:
* platform/ios/tables/mozilla/bugs/bug18359-expected.txt:
* platform/ios/tables/mozilla/bugs/bug2479-2-expected.txt:
* platform/ios/tables/mozilla/bugs/bug2479-3-expected.txt:
* platform/ios/tables/mozilla/bugs/bug2479-4-expected.txt:
* platform/ios/tables/mozilla/bugs/bug26178-expected.txt:
* platform/ios/tables/mozilla/bugs/bug28928-expected.txt:
* platform/ios/tables/mozilla/bugs/bug29326-expected.txt:
* platform/ios/tables/mozilla/bugs/bug33855-expected.txt:
* platform/ios/tables/mozilla/bugs/bug39209-expected.txt:
* platform/ios/tables/mozilla/bugs/bug4382-expected.txt:
* platform/ios/tables/mozilla/bugs/bug4429-expected.txt:
* platform/ios/tables/mozilla/bugs/bug44505-expected.txt:
* platform/ios/tables/mozilla/bugs/bug4527-expected.txt:
* platform/ios/tables/mozilla/bugs/bug46368-1-expected.txt:
* platform/ios/tables/mozilla/bugs/bug46368-2-expected.txt:
* platform/ios/tables/mozilla/bugs/bug51037-expected.txt:
* platform/ios/tables/mozilla/bugs/bug51727-expected.txt:
* platform/ios/tables/mozilla/bugs/bug52505-expected.txt:
* platform/ios/tables/mozilla/bugs/bug52506-expected.txt:
* platform/ios/tables/mozilla/bugs/bug60749-expected.txt:
* platform/ios/tables/mozilla/bugs/bug68912-expected.txt:
* platform/ios/tables/mozilla/bugs/bug7342-expected.txt:
* platform/ios/tables/mozilla/bugs/bug92647-2-expected.txt:
* platform/ios/tables/mozilla/bugs/bug96334-expected.txt:
* platform/ios/tables/mozilla/collapsing_borders/bug41262-4-expected.txt:
* platform/ios/tables/mozilla/core/margins-expected.txt:
* platform/ios/tables/mozilla/dom/tableDom-expected.txt:
* platform/ios/tables/mozilla/other/move_row-expected.txt:
* platform/ios/tables/mozilla_expected_failures/bugs/bug1725-expected.txt:
* platform/ios/tables/mozilla_expected_failures/bugs/bug2479-5-expected.txt:
* platform/ios/tables/mozilla_expected_failures/bugs/bug58402-2-expected.txt:
* platform/ios/tables/mozilla_expected_failures/collapsing_borders/bug41262-5-expected.txt:
* platform/ios/tables/mozilla_expected_failures/collapsing_borders/bug41262-6-expected.txt:
* platform/ios/tables/mozilla_expected_failures/core/captions1-expected.txt:
* platform/ios/tables/mozilla_expected_failures/core/captions2-expected.txt:
* platform/ios/transforms/3d/point-mapping/3d-point-mapping-overlapping-expected.txt:
* platform/mac-highsierra/fast/css/apple-system-control-colors-expected.txt:
* platform/mac-mojave/fast/css/apple-system-control-colors-expected.txt:
* platform/mac/compositing/images/direct-image-background-color-expected.txt:
* platform/mac/compositing/webgl/webgl-background-color-expected.txt:
* platform/mac/fast/backgrounds/background-leakage-expected.txt:
* platform/mac/fast/backgrounds/background-leakage-transforms-expected.txt:
* platform/mac/fast/block/basic/fieldset-stretch-to-legend-expected.txt:
* platform/mac/fast/block/float/intruding-painted-twice-expected.txt:
* platform/mac/fast/borders/fieldsetBorderRadius-expected.txt:
* platform/mac/fast/borders/mixed-border-styles-expected.txt:
* platform/mac/fast/borders/mixed-border-styles-radius-expected.txt:
* platform/mac/fast/borders/mixed-border-styles-radius2-expected.txt:
* platform/mac/fast/box-shadow/inset-box-shadow-radius-expected.txt:
* platform/mac/fast/css/apple-system-control-colors-expected.txt:
* platform/mac/fast/css/percentage-non-integer-expected.txt:
* platform/mac/fast/css/shadow-multiple-expected.txt:
* platform/mac/fast/css/viewport-units-dynamic-expected.txt:
* platform/mac/fast/multicol/client-rects-expected.txt:
* platform/mac/fast/multicol/client-rects-spanners-complex-expected.txt:
* platform/mac/fast/multicol/client-rects-spanners-expected.txt:
* platform/mac/fast/multicol/newmulticol/client-rects-expected.txt:
* platform/mac/fast/overflow/float-in-relpositioned-expected.txt:
* platform/mac/fast/ruby/select-ruby-expected.txt:
* platform/mac/fast/table/border-collapsing/collapsed-borders-adjoining-sections-vertical-rl-expected.txt:
* platform/mac/fast/table/border-collapsing/collapsed-borders-painted-once-on-inner-cells-expected.txt:
* platform/mac/fast/table/border-collapsing/equal-precedence-resolution-expected.txt:
* platform/mac/fast/table/border-collapsing/equal-precedence-resolution-vertical-expected.txt:
* platform/mac/fast/text/shadow-no-blur-expected.txt:
* platform/mac/fast/text/shadow-translucent-fill-expected.txt:
* platform/mac/imported/w3c/web-platform-tests/svg/import/color-prop-02-f-manual-expected.txt:
* platform/mac/imported/w3c/web-platform-tests/svg/import/color-prop-03-t-manual-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt:
* platform/mac/transforms/3d/point-mapping/3d-point-mapping-overlapping-expected.txt:
* platform/win/TestExpectations:
* svg/custom/fill-opacity-rgba-expected.txt:
* svg/custom/mask-colorspace-expected.txt:

Canonical link: https://commits.webkit.org/217598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252598 268f45cc-cd09-0410-ab3c-d52691b4dbfc