Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp
@@ -610,9 +610,8 @@ static Color parseRGBParameters(CSSParserTokenRange& range)
             alpha = alphaPercent->doubleValue() / 100.0;
         }
 
-        // Convert the floating pointer number of alpha to an integer in the range [0, 256),
-        // with an equal distribution across all 256 values.
-        alphaComponent = static_cast<int>(clampTo<double>(alpha, 0.0, 1.0) * nextafter(256.0, 0.0));
+        // W3 standard stipulates a 2.55 alpha value multiplication factor.
+        alphaComponent = static_cast<int>(lroundf(clampTo<double>(alpha, 0.0, 1.0) * 255.0f));
     };
 
     result = Color(makeRGBA(colorArray[0], colorArray[1], colorArray[2], alphaComponent));
